--- a/styles.css
+++ b/styles.css
@@ -74,14 +74,14 @@ h1 {
 .hero {
   padding: 1em;
   max-width: 100%;
-  background-color: #294860;
+  background-color: #004c4d;
   color: white;
 }
 
 .my-picture {
   display: block;
   margin: 0 auto 10px;
-  width: 100%;
+  max-width: 100%;
   border: 2px solid white;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -92,8 +92,9 @@ h1 {
   max-width: 100%;
   color: #969696;
   letter-spacing: 0.05em;
-  font-size: 20px;
+  font-size: 18px;
   margin: 0;
+  font-style: italic;
 }
 
 .my-info {
